[package]
name = "vssv"
description = "A very simple secrets vault."
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/vssv"
license = "MIT"
version = "1.1.1"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "chrono",
  "ipnetwork",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
