[package]
name = "vssv"
description = "A very simple secrets vault."
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/vssv"
license = "MIT"
version = "2.0.2"
edition = "2024"
build = "build.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "chrono",
  "ipnetwork",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
vergen-git2 = "1"
